# sha

./: .dockerignore  .env.example  .gitignore  .index.yaml  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  project.identity.json
agent/: README.md  go.mod
backend/: README.md  pyproject.toml
backend/app/: auth.py  config.py  db.py  installer_artifacts.py  main.py  migrations.py  models.py  utils.py
backend/app/api/endpoints/: approvals.py  endpoints.py  evidence.py  health.py  installers.py  posture.py  response_actions.py  source_packs.py
backend/app/schemas/: contracts.py  schema_exports.py
backend/app/source_packs/: __init__.py  catalog.py  contracts.py
backend/scripts/: build_source_catalog.py  export_contract_schemas.py  migrate.py
backend/tests/: conftest.py  test_agent_reporting.py  test_approval_workflows.py  test_auth.py  test_compliance_evidence.py  test_contract_schema_exports.py  test_contracts.py  test_health.py  test_installer_artifacts.py  test_persistence_roundtrip.py  test_response_actions.py  test_source_pack_api.py  test_source_pack_builder.py  test_source_pack_contracts.py
control-packs/: README.md  catalog.json
deploy/: backend.Dockerfile  frontend.Dockerfile
frontend/: README.md  next.config.mjs  package.json  pnpm-lock.yaml  vitest.config.ts
schemas/: README.md
scripts/: backup-ha-postgres.sh  build-sha-agent-release.sh  install-public-host.sh  install-public-routing.sh  install-sha-agent-linux.sh  install-sha-agent-macos.sh  install-sha-agent-windows.ps1  restore-ha-postgres.sh  test-ha-compose-secrets.sh  test-ha-compose.sh  (+5 more)
(+57 files in other folders)
