[project]
name = "sha-backend"
version = "0.1.0"
description = "Security Hardening Automation control-plane backend"
license = "Apache-2.0"
requires-python = "==3.13.*"
dependencies = [
  "fastapi==0.136.3",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "sqlalchemy==2.0.46",
  "uvicorn[standard]==0.40.0",
  "httpx==0.28.1",
  "pytest==9.0.3",
  "pytest-cov>=7.1.0",
  "starlette==1.2.1",
]

[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
